# RollingAverageTracker

./: CMakeLists.txt
source/: RollingAverageTracker.h
tests/: RollingAverageTrackerTests.cpp  main_tests.cpp
